# timeswitch

./: .editorconfig  .gitignore  README.md  io.github.fsobolev.TimeSwitch.json  meson.build  timeswitch.doap
data/: io.github.fsobolev.TimeSwitch.appdata.xml.in  io.github.fsobolev.TimeSwitch.desktop.in  io.github.fsobolev.TimeSwitch.gschema.xml  io.github.fsobolev.TimeSwitch.metainfo.xml.in  io.github.fsobolev.TimeSwitch.service.in  meson.build
data/css/: timeswitch.css
data/icons/: meson.build
po/: CREDITS.json  LINGUAS  POTFILES.in  README.md  cs.po  de.po  es.po  et.po  fr.po  id.po  it.po  meson.build  nl.po  pt.po  pt_BR.po  ru.po  sv.po  timeswitch.pot  tr.po  uk.po  zh_Hans.po
src/: actions.py  cmd_warning.py  config.py  main.py  main_window.py  main_window_shortcuts.py  manage_presets_view.py  manage_presets_window.py  meson.build  notification_settings_window.py  player.py  presets_manager.py  shortcuts_dialog.ui  timer.py  timeswitch.gresource.xml  timeswitch.in  translator_credits.py.in  window.py
